# pooling-windows

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  Sampling_and_Aliasing.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.md  index.rst  remove_gen_files.py
docs/api/: PoolingWindows.rst  index.md  index.rst  pooling.rst  sampling.rst
docs/getting_started/: index.md  index.rst
docs/tutorials/: generate_windows.md  index.md  index.rst  sampling_and_aliasing.md
src/fenestration/: __init__.py  _plot.py  _tensors.py  pooling.py  pooling_windows.py  sampling.py
src/pooling/: __init__.py  calculate.py  plot.py  pooling.py  pooling_windows.py  sampling.py  utils.py  version.py
tests/: conftest.py  test_plotting.py  test_pooling.py  test_sampling.py
