[project]
name = "pooling-windows"
version = "0.1.0"
description = "PyTorch implementation of pooling windows like those used in Freeman and Simoncelli, 2011."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.1",
    "torch>=1.4",
    "matplotlib>=3.3",
    "opt_einsum>=3.3",
    "pyrtools>=1.0.9",
]

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/LabForComputationalVision/pooling-windows"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-include = ["*.ipynb"]
src = ["src", "tests"]
# Exclude a variety of commonly ignored directories.
exclude = []

# Set the maximum line length (same as Black)
line-length = 88

indent-width = 4 # same as Black

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes: basic static analysis for common errors like undefined names
    # and missing imports.
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
