[project]
name = "pooling-windows"
dynamic = ["version"]
description = "PyTorch implementation of pooling windows like those used in Freeman and Simoncelli, 2011."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.1",
    "torch>=1.4",
    "matplotlib>=3.3",
    "opt_einsum>=3.3",
]

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/emeyer121/pooling-windows"

[project.optional-dependencies]
tests = [
    "pytest>=5.1.2",
    "pytest-cov",
    "plenoptic>=2.0.1",
]

docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = 'semver-pep440'
local_scheme = 'no-local-version'

[tool.pytest.ini_options]
addopts = "--cov=pooling --cov-report term"
testpaths = ["tests"]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"

[tool.ruff]
extend-include = ["*.ipynb"]
src = ["src", "tests"]
# Exclude a variety of commonly ignored directories.
exclude = []

# Set the maximum line length (same as Black)
line-length = 88

indent-width = 4 # same as Black

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes: basic static analysis for common errors like undefined names
    # and missing imports.
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # in particular, this looks for invalid escape sequences (has been an issue
    # for regex strings used in tests)
    "W",
    # docstrings, note that DOC rules (pydoclint) are all in preview, so have to be explicitly added
    "D", "DOC201", "DOC202", "DOC402", "DOC403", "DOC501",
    # flake8 function annotations
    "ANN"
]
ignore = []

# allow preview rules, but require them to be explicitly added
preview = true
explicit-preview-rules = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
# Ignore docstring rules everywhere except for the `src/` directory, from
# https://docs.astral.sh/ruff/settings/#lint_per-file-ignores.
"!src/**.py" = ["D", "DOC", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.numpydoc_validation]
checks = [
    "all",
    "SA01",
    # will remove this eventually
    "EX01",
    "PR04",
]

# don't report on objects that match any of these regex
exclude = ["__init__.py"]
